--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=VITE_RECAPTCHA_SITE_KEY"></script>
   </body>
 </html>
