Ajout image lien

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <meta property="og:title" content="Studio1921 | Création de site web pour artisans à Lyon" />
+    <meta property="og:description" content="Agence web lyonnaise spécialisée dans les sites vitrine pour boulangers, traiteurs et pâtissiers." />
+    <meta property="og:image" content="https://www.studio1921.fr/og-image.png" />
+    <meta property="og:url" content="https://www.studio1921.fr/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://www.studio1921.fr/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
