Ajout google validation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Studio1921 | Création de site web pour artisans à Lyon" />
     <meta name="twitter:description" content="Agence web lyonnaise spécialisée dans la création de sites vitrine pour boulangers, traiteurs et pâtissiers à Lyon." />
+    <meta name="google-site-verification" content="baNZogbEpJDL6aaLeqxG71Kt_hyCxM506IAK-ObalNw" />
     <meta name="twitter:image" content="https://www.studio1921.fr/og-image.png" />
 
     <!-- Fonts -->
